Review Request 7894 see PLS-2973, PLS-2971 - fixed truncated numbers for record count - removed download button from attributes tab

--- a/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
+++ b/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
@@ -646,11 +646,6 @@
                     &.data {
                         @include flex-item(0 1 auto);
                         text-align: right;
-                        &:not(.records) {
-                            text-overflow: ellipsis;
-                            overflow: hidden;
-                            min-width: 20%;
-                        }
                         &.data-value-yes {
                             font-weight: bold;
                         }
